--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,18 @@
     tools:context="com.sdaacademy.grzebieluch.pawel.myapplication29_04.MainActivity">
 
     <ListView
+        android:id="@+id/activity_main_list_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
     <EditText
+        android:id="@+id/activity_main_edit_text"
         android:layout_width="match_parent"
-        android:layout_height="24dp"
+        android:layout_height="wrap_content"
         android:hint="Write command"/>
+    <Button
+        android:id="@+id/activity_main_refresh_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Refresh"/>
 </RelativeLayout>
