--- a/app/src/main/res/layout/single_row.xml
+++ b/app/src/main/res/layout/single_row.xml
@@ -1,43 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
     <TextView
-        android:text=" 1. "
-        android:background="@drawable/back"
+        android:id="@+id/single_row_item_number"
         android:layout_width="30dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
+        android:layout_alignBottom="@+id/single_row_item_text"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:id="@+id/single_row_id"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/back"
         android:gravity="center"
 
-        android:layout_alignBottom="@+id/textView2" />
+        android:text=" 1. " />
 
 
     <TextView
-        android:text="kjkllkjkjjjllkkkkkkkkkkkkkkkkkkkkkkkkkkjjl"
-        android:gravity="center"
-        android:background="@drawable/back"
+        android:id="@+id/single_row_item_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView2"
-android:layout_toLeftOf="@id/checkBox"
-        android:layout_toRightOf="@id/single_row_id"
-
+        android:layout_alignBottom="@+id/single_row_item_check_box"
         android:layout_alignParentTop="true"
-        android:layout_alignBottom="@+id/checkBox"
-        />
+        android:layout_toLeftOf="@id/single_row_item_number"
+        android:layout_toRightOf="@id/single_row_item_number"
+        android:background="@drawable/back"
+
+        android:gravity="center"
+        android:text="Default text" />
+
     <CheckBox
 
+        android:id="@+id/single_row_item_check_box"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/checkBox"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:background="@drawable/back"/>
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/back" />
 </RelativeLayout>
